--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,62 @@
-# Compiled class file
+# ==============================================================================
+# HOSTINGOVE CENTRUM - .gitignore
+# ==============================================================================
+
+# ------------------------------------------------------------------------------
+# Environment & Secrets
+# ------------------------------------------------------------------------------
+.env
+.env.local
+.env.*.local
+*.pem
+*.key
+
+# ------------------------------------------------------------------------------
+# IDE
+# ------------------------------------------------------------------------------
+.idea/
+*.iml
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# ------------------------------------------------------------------------------
+# Java / Spring Boot
+# ------------------------------------------------------------------------------
+backend/target/
+backend/.mvn/
+backend/*.jar
 *.class
-
-# Log file
 *.log
+hs_err_pid*
+replay_pid*
 
-# BlueJ files
-*.ctxt
+# ------------------------------------------------------------------------------
+# Node.js / Frontend
+# ------------------------------------------------------------------------------
+frontend/node_modules/
+frontend/dist/
+frontend/build/
+frontend/.next/
+npm-debug.log*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# ------------------------------------------------------------------------------
+# Docker
+# ------------------------------------------------------------------------------
+# Neignorujeme docker-compose.yml - ten chceme v repu
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
+# ------------------------------------------------------------------------------
+# Customers data (runtime)
+# Ukazkove weby (user_2, user_3, user_4) JSOU v repu pro testovani
+# ------------------------------------------------------------------------------
+# customers/*/
+
+# ------------------------------------------------------------------------------
+# Misc
+# ------------------------------------------------------------------------------
 *.zip
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+tmp/
+temp/
