--- a/web/apache-config/vhosts.conf
+++ b/web/apache-config/vhosts.conf
@@ -1,13 +1,13 @@
 # ==============================================================================
 # HOSTING CENTRUM - Apache VirtualHosts
 #
-# TYM WEBSERVER: Pridavejte dalsi VirtualHosty podle potreby.
+# WEBSERVER TEAM: Add additional VirtualHosts as needed.
 #
-# Architektura:
-#   1. Hlavni VirtualHost - reverse proxy na Spring Boot API
-#   2. Zakaznicke VirtualHosty - servuji staticky obsah z /srv/customers/
+# Architecture:
+#   1. Main VirtualHost - reverse proxy to Spring Boot API
+#   2. Customer VirtualHosts - serve static content from /srv/customers/
 #
-# Pro testovani pridejte do /etc/hosts:
+# For testing, add to /etc/hosts:
 #   127.0.0.1   localhost
 #   127.0.0.1   www.mojefirma.cz mojefirma.cz
 #   127.0.0.1   www.druhafirma.cz druhafirma.cz
@@ -15,47 +15,47 @@
 # ==============================================================================
 
 # ==============================================================================
-# HLAVNI VIRTUALHOST - Platforma (API + Frontend)
+# MAIN VIRTUALHOST - Platform (API + Frontend)
 #
-# Vsechny pozadavky jdou na Spring Boot backend.
-# TYM FRONTEND: Pokud pouzijete React/Next.js, upravte proxy pravidla.
+# All requests go to Spring Boot backend.
+# FRONTEND TEAM: If using React/Next.js, modify proxy rules.
 # ==============================================================================
 <VirtualHost *:80>
     ServerName localhost
     ServerAlias hostingcentrum.local
 
-    # --- Logy ---
+    # --- Logs ---
     ErrorLog /proc/self/fd/2
     CustomLog /proc/self/fd/1 combined
 
-    # --- Reverse Proxy na Spring Boot ---
+    # --- Reverse Proxy to Spring Boot ---
     ProxyPreserveHost On
     ProxyPass / http://backend:8080/
     ProxyPassReverse / http://backend:8080/
 
-    # --- Timeout pro API ---
+    # --- Timeout for API ---
     ProxyTimeout 60
 
-    # --- Hlavicky ---
+    # --- Headers ---
     RequestHeader set X-Forwarded-Proto "http"
     RequestHeader set X-Forwarded-Port "80"
 </VirtualHost>
 
 # ==============================================================================
-# ZAKAZNICKE VIRTUALHOSTY
+# CUSTOMER VIRTUALHOSTS
 #
-# Kazdy zakaznik ma svou domenu a slozku v /srv/customers/{user_id}/www/
+# Each customer has their domain and folder in /srv/customers/{user_id}/www/
 #
-# TYM WEBSERVER: Tyto VirtualHosty jsou pro demonstraci.
-# V produkci by se generovaly dynamicky nebo pres .htaccess.
+# WEBSERVER TEAM: These VirtualHosts are for demonstration.
+# In production, they would be generated dynamically or via .htaccess.
 # ==============================================================================
 
-# --- Testovaci zakaznik 1: mojefirma.cz ---
+# --- Test customer 1: mojefirma.cz ---
 <VirtualHost *:80>
     ServerName www.mojefirma.cz
     ServerAlias mojefirma.cz
 
-    # Slozka zakaznika (namapovana pres Docker volume)
+    # Customer folder (mapped via Docker volume)
     DocumentRoot /srv/customers/user_2/www
 
     <Directory /srv/customers/user_2/www>
@@ -64,12 +64,12 @@
         Require all granted
     </Directory>
 
-    # Logy
+    # Logs
     ErrorLog /proc/self/fd/2
     CustomLog /proc/self/fd/1 combined
 </VirtualHost>
 
-# --- Testovaci zakaznik 2: druhafirma.cz ---
+# --- Test customer 2: druhafirma.cz ---
 <VirtualHost *:80>
     ServerName www.druhafirma.cz
     ServerAlias druhafirma.cz
@@ -86,7 +86,7 @@
     CustomLog /proc/self/fd/1 combined
 </VirtualHost>
 
-# --- Testovaci zakaznik 3: tretifirma.cz ---
+# --- Test customer 3: tretifirma.cz ---
 <VirtualHost *:80>
     ServerName www.tretifirma.cz
     ServerAlias tretifirma.cz
