--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>backend</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>Hosting Centrum</name>
-	<description>Hostingove centrum - semestralni prace BSWS</description>
+	<description>Hosting Centrum - BSWS semester project</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -41,7 +41,7 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-		<!-- ===== VALIDACE ===== -->
+		<!-- ===== VALIDATION ===== -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -72,7 +72,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- ===== DATABAZE ===== -->
+		<!-- ===== DATABASE ===== -->
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
@@ -84,6 +84,16 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- ===== FLYWAY (DB migrations) ===== -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
+
 		<!-- ===== SWAGGER ===== -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -91,7 +101,7 @@
 			<version>3.0.0</version>
 		</dependency>
 
-		<!-- ===== TESTY ===== -->
+		<!-- ===== TESTS ===== -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-restdocs</artifactId>
