update 17.02.2026 fix setup docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,44 +1,50 @@
-# ==============================================================================
-# SPRING BOOT BACKEND - Dockerfile
-#
-# Multi-stage build:
-#   1. Build stage: Maven kompilace
-#   2. Runtime stage: Pouze JRE + JAR
-#
-# TYM BACKEND: Upravte podle potreby
-# ==============================================================================
+# ==================================================================
+# BACKEND Dockerfile - HOSTING CENTRUM
+# ==================================================================
 
 # --- BUILD STAGE ---
+# Používáme BuildKit cache pro Maven
+# Spustit build s DOCKER_BUILDKIT=1 docker build ...
 FROM maven:3.9-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 
-# Zkopiruj pom.xml a stahni dependencies (cache layer)
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
+# --- Maven dependencies cache ---
+# Tento mount umožní BuildKit cachovat všechny závislosti mezi buildu
+RUN --mount=type=cache,target=/root/.m2 \
+    echo "Maven cache připravena"
 
-# Zkopiruj zdrojaky a buildni
+# --- Zkopíruj POM a stáhni dependencies ---
+COPY pom.xml ./
+COPY .mvn ./.mvn
+RUN --mount=type=cache,target=/root/.m2 mvn dependency:go-offline -B
+
+# --- Zkopíruj zdrojový kód a buildni aplikaci ---
 COPY src ./src
-RUN mvn clean package -DskipTests -B
+RUN --mount=type=cache,target=/root/.m2 mvn clean package -DskipTests -B
 
 # --- RUNTIME STAGE ---
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 
-# Bezpecnost: ne-root user
+# --- Root only pro instalaci curl ---
+USER root
+RUN apk add --no-cache curl
+
+# --- Vytvoření non-root uživatele ---
 RUN addgroup -g 1000 appgroup && \
     adduser -u 1000 -G appgroup -D appuser
 
-# Zkopiruj JAR z build stage
+# --- Kopírování JAR z build stage ---
 COPY --from=build /app/target/*.jar app.jar
 
-# Vlastnik souboru
+# --- Nastavení vlastníka a přepnutí na non-root ---
 RUN chown -R appuser:appgroup /app
 USER appuser
 
-# Health check endpoint
+# --- Healthcheck ---
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
+    CMD curl -f http://localhost:8080/actuator/health || exit 1
 
+# --- Port a entrypoint ---
 EXPOSE 8080
-
 ENTRYPOINT ["java", "-jar", "app.jar"]
