--- a/web/apache-config/vhosts.conf
+++ b/web/apache-config/vhosts.conf
@@ -22,24 +22,28 @@
 # ==============================================================================
 <VirtualHost *:80>
     ServerName localhost
-    ServerAlias hostingcentrum.local
+    ServerAlias frontend.local
 
-    # --- Logs ---
+    DocumentRoot /srv/frontend
+
+    <Directory /srv/frontend>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+
+        # Povolit fallback pro React Router
+        RewriteEngine On
+        RewriteBase /
+        RewriteRule ^index\.html$ - [L]
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule . /index.html [L]
+    </Directory>
+
     ErrorLog /proc/self/fd/2
     CustomLog /proc/self/fd/1 combined
-
-    # --- Reverse Proxy to Spring Boot ---
-    ProxyPreserveHost On
-    ProxyPass / http://backend:8080/
-    ProxyPassReverse / http://backend:8080/
-
-    # --- Timeout for API ---
-    ProxyTimeout 60
-
-    # --- Headers ---
-    RequestHeader set X-Forwarded-Proto "http"
-    RequestHeader set X-Forwarded-Port "80"
 </VirtualHost>
+
 
 # ==============================================================================
 # CUSTOMER VIRTUALHOSTS
